Added header, sections and unordered lists

--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,55 @@
 <!doctype html>
 <html>
 	<head>
-        <meta charset="utf-8" />
-        <title>Sherman Hewitt's Resume</title>
+        	<meta charset="utf-8" />
+        	<title>Sherman Hewitt's Resume</title>
 	</head>
 	
 	<body>
+		<header>
+			<h1>Sherman A. Hewitt Jr.</h1>
+			<p>s.hewitt7@umiami.edu</p>
+			<p>678-925-2463</p>
+			<p>Address 1</p>
+			<p>Address 2</p>
+		</header>
+		
+		<section>
+			<h2>Education</h2>
+			<p>University of Miami, Coral Gables, FL.</p>
+			<p>Bachelor of Arts in Computer Science, May 2017</p>
+			<p>Minors in Journalism and Interactive Media</p>
+		</section>
+		
+		<section>
+			<h2>Experience</h2>
+			<p>JOB ONE</p>
+			<ul>
+				<li></li>
+			</ul>
+			
+			<p>JOB TWO</p>
+			<ul>
+				<li></li>
+			</ul>
+			
+			<p>JOB THREE</p>
+			<ul>
+				<li></li>
+			</ul>
+			
+			<p>JOB FOUR</p>
+			<ul>
+				<li></li>
+			</ul>
+		</section>
+		
+		<section>
+			<h2>Skills</h2>
+			<ul>
+				<li></li>
+			</ul>
+		</section>
 	</body>
 
 </html>
