--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,9 @@
 	<head>
         	<meta charset="utf-8" />
         	<title>Sherman Hewitt's Resume</title>
+					<link href="css/styles.css" rel="stylesheet" />
 	</head>
-	
+
 	<body>
 		<header>
 			<h1>Sherman A. Hewitt Jr.</h1>
@@ -13,7 +14,7 @@
                 Mahoney Residential College<br />
                 s.hewitt7@umiami.edu<br />
             </address>
-            
+
             <nav>
                 <ul>
                     <li><a href="#education">Education</a></li>
@@ -22,7 +23,7 @@
                 </ul>
             </nav>
 		</header>
-		
+
         <main>
             <section id="education">
                 <h2>Education</h2>
@@ -33,37 +34,47 @@
 
             <section id="experience">
                 <h2>Experience</h2>
-                <p>Assistant Online Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
-                <ul>
-                    <li>Edited and scheduled stories for publication online, maintaining a constant flow of content</li>
-                    <li>Organized story workflow between editors with Trello, bringing Agile ideas into the newsroom</li>
-                    <li>Uploaded newspaper’s virtual edition to Issuu and sent MailChimp newsletters, increasing traffic to the website</li>
-                </ul>
+								
+								<article>
+	                <p>Assistant Online Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
+	                <ul>
+	                    <li>Edited and scheduled stories for publication online, maintaining a constant flow of content</li>
+	                    <li>Organized story workflow between editors with Trello, bringing Agile ideas into the newsroom</li>
+	                    <li>Uploaded newspaper’s virtual edition to Issuu and sent MailChimp newsletters, increasing traffic to the website</li>
+	                </ul>
+							  </article>
 
-                <p>Copy Chief, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Aug. 2014 to Dec. 2014</p>
-                <ul>
-                    <li>Proofread articles alongside other editors to better understand and edit content</li>
-                    <li>Coordinated a team of copy editors to increase availability of all-day online editing</li>
-                    <li>Contributed ideas during weekly editorial meetings in order to help direct the newspaper’s goals</li>
-                    <li>Drafted standards and guidelines for publishing content online, reducing errors made by copy desk</li>
-                    <li>Crafted headlines based on search engine optimization methods, driving traffic to the newspaper’s website</li>
-                </ul>
+								<article>
+									<p>Copy Chief, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Aug. 2014 to Dec. 2014</p>
+	                <ul>
+	                    <li>Proofread articles alongside other editors to better understand and edit content</li>
+	                    <li>Coordinated a team of copy editors to increase availability of all-day online editing</li>
+	                    <li>Contributed ideas during weekly editorial meetings in order to help direct the newspaper’s goals</li>
+	                    <li>Drafted standards and guidelines for publishing content online, reducing errors made by copy desk</li>
+	                    <li>Crafted headlines based on search engine optimization methods, driving traffic to the newspaper’s website</li>
+	                </ul>
+								</article>
 
-                <p>Quality Assurance Intern, <a href="http://www.fisglobal.com/">FIS Global</a>, Sunrise, FL. - June 2014 to Aug. 2014</p>
-                <ul>
-                    <li>Learned SQL through database management in Microsoft's SQL Server</li>
-                    <li>Acquired the fundamentals of agile methodologies and the software development life cycle</li>
-                    <li>Created workflow visualizations for the QA team, increasing the fulfillment of standard operating procedures</li>
-                    <li>Managed the team's SharePoint website, keeping documents updated and creating guidelines for current and future QA members</li>
-                </ul>
+								<article>
+									<p>Quality Assurance Intern, <a href="http://www.fisglobal.com/">FIS Global</a>, Sunrise, FL. - June 2014 to Aug. 2014</p>
+	                <ul>
+	                    <li>Learned SQL through database management in Microsoft's SQL Server</li>
+	                    <li>Acquired the fundamentals of agile methodologies and the software development life cycle</li>
+	                    <li>Created workflow visualizations for the QA team, increasing the fulfillment of standard operating procedures</li>
+	                    <li>Managed the team's SharePoint website, keeping documents updated and creating guidelines for current and future QA members</li>
+	                </ul>
+								</article>
 
-                <p>Copy Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Sept. 2013 to May 2014</p>
-                <ul>
-                    <li>Checked accuracy of facts in articles</li>
-                    <li>Imagined up headlines and captions that caught readers' attention</li>
-                    <li>Corrected spelling, grammatical and AP style errors in the newspaper</li>
-                    <li>Published stories online through WordPress, a blogging tool and content management system</li>
-                </ul>
+								<article>
+									<p>Copy Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Sept. 2013 to May 2014</p>
+	                <ul>
+	                    <li>Checked accuracy of facts in articles</li>
+	                    <li>Imagined up headlines and captions that caught readers' attention</li>
+	                    <li>Corrected spelling, grammatical and AP style errors in the newspaper</li>
+	                    <li>Published stories online through WordPress, a blogging tool and content management system</li>
+	                </ul>
+								</article>
+
             </section>
 
             <section id="skills">
@@ -76,6 +87,9 @@
                 </ul>
             </section>
         </main>
+
+				<footer>
+				</footer>
 	</body>
 
 </html>
