Added image to img folder, resume.

--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,8 @@
 	<body>
 		<header>
 			<h1>Sherman A. Hewitt Jr.</h1>
+
+			<img src="img/Sherman_Hewitt_picture.jpg" alt="Sherman Hewitt" />
             <address>
                 University of Miami<br />
                 Mahoney Residential College<br />
@@ -34,7 +36,7 @@
 
             <section id="experience">
                 <h2>Experience</h2>
-								
+
 								<article>
 	                <p>Assistant Online Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
 	                <ul>
