Added lots of CSS, rearranged HTML. Need to commit more often.

--- a/resume.html
+++ b/resume.html
@@ -7,35 +7,54 @@
 	</head>
 
 	<body>
-		<header>
-			<h1>Sherman A. Hewitt Jr.</h1>
+		<div id="container">
+			<div class="column_1">
+				<header>
+					<h1>Sherman A. Hewitt Jr.</h1>
 
-			<img src="img/Sherman_Hewitt_picture.jpg" alt="Sherman Hewitt" />
-            <address>
-                University of Miami<br />
-                Mahoney Residential College<br />
-                s.hewitt7@umiami.edu<br />
-            </address>
+					<div id="img-container">
+						<img src="img/Sherman_Hewitt_picture.jpg" alt="Sherman Hewitt" />
+					</div>
 
-            <nav>
-                <ul>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                </ul>
-            </nav>
-		</header>
+		            <address>
+		                University of Miami<br />
+		                Mahoney Residential College<br />
+		                s.hewitt7@umiami.edu<br />
+		            </address>
 
-        <main>
-            <section id="education">
-                <h2>Education</h2>
-                <p><a href="http://www.miami.edu/">University of Miami</a>, Coral Gables, FL.</p>
-                <p>Bachelor of Arts in Computer Science, May 2017</p>
-                <p>Minors in Journalism and Interactive Media</p>
-            </section>
+		            <nav>
+		                <ul>
+		                    <li><a href="#education">Education</a></li>
+		                    <li><a href="#experience">Experience</a></li>
+		                    <li><a href="#skills">Skills</a></li>
+		                </ul>
+		            </nav>
+				</header>
+			</div>
 
-            <section id="experience">
-                <h2>Experience</h2>
+			<div class="column_2">
+	      <main>
+	          <section id="education">
+	              <h2>Education</h2>
+								<ul>
+		              <li><a href="http://www.miami.edu/">University of Miami</a>, Coral Gables, FL.</li>
+		              <li>Bachelor of Arts, Computer Science, May 2017</li>
+		              <li>Minors in Journalism and Interactive Media</li>
+								</ul>
+	          </section>
+
+						<section id="skills">
+	              <h2>Skills</h2>
+	              <ul>
+	                  <li>Java, Python, HTML, Microsoft SQL Server</li>
+	                  <li>Agile Methodology (Kanban, Scrum)</li>
+	                  <li>Conversational Spanish</li>
+	                  <li>Microsoft Suite</li>
+	              </ul>
+	          </section>
+
+	          <section id="experience">
+	              <h2>Experience</h2>
 
 								<article>
 	                <p>Assistant Online Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
@@ -77,21 +96,14 @@
 	                </ul>
 								</article>
 
-            </section>
+	          </section>
 
-            <section id="skills">
-                <h2>Skills</h2>
-                <ul>
-                    <li>Java, Python, HTML, Microsoft SQL Server</li>
-                    <li>Agile Methodology (Kanban, Scrum)</li>
-                    <li>Conversational Spanish</li>
-                    <li>Microsoft Suite</li>
-                </ul>
-            </section>
-        </main>
+	      </main>
+			</div>
 
-				<footer>
-				</footer>
+			<footer>
+			</footer>
+		</div>
 	</body>
 
 </html>
