Added extra list item to Assistant Online Editor position.

--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
 						<section id="skills">
 	              <h2>Skills</h2>
 	              <ul>
-	                  <li>Java, Python, HTML, Microsoft SQL Server</li>
+	                  <li>Java, Python, HTML/CSS, Microsoft SQL Server</li>
 	                  <li>Agile Methodology (Kanban, Scrum)</li>
 	                  <li>Conversational Spanish</li>
 	                  <li>Microsoft Suite</li>
@@ -62,6 +62,7 @@
 	                <ul>
 	                    <li>Edited and scheduled stories for publication online, maintaining a constant flow of content</li>
 	                    <li>Organized story workflow between editors with Trello, bringing Agile ideas into the newsroom</li>
+											<li>Enhanced online articles by adding interactive elements such as audio, maps, photo galleries and polls</li>
 	                    <li>Uploaded newspaper’s virtual edition to Issuu and sent MailChimp newsletters, increasing traffic to the website</li>
 	                </ul>
 							  </article>
