Updated address, added more contact info

--- a/resume.html
+++ b/resume.html
@@ -17,19 +17,42 @@
 
 					<h1>Sherman A. Hewitt Jr.</h1>
 
-		            <address>
-		                University of Miami<br />
-		                Mahoney Residential College<br />
-		                s.hewitt7@umiami.edu<br />
-		            </address>
+					<div id="contact-info">
+						<ul>
+							<li>Phone</li>
+							<li>Email</li>
+							<li>Twitter</li>
+							<li>LinkedIn</li>
+							<li>Github</li>
+						</ul>
+					</div>
 
-		            <nav>
-		                <ul>
-		                    <li><a href="#education">Education</a></li>
-		                    <li><a href="#experience">Experience</a></li>
-		                    <li><a href="#skills">Skills</a></li>
-		                </ul>
-		            </nav>
+					<!-Current Address->
+					<div id="addr_current">
+						<p>Current Address</p>
+            <address>
+                University of Miami<br />
+                Mahoney Residential College<br />
+                s.hewitt7@umiami.edu<br />
+            </address>
+					</div>
+
+					<!-Permanent Address->
+					<div id="addr_permanent">
+						<p>Permanent Address</p>
+						<address>
+							3454 Coral Springs Drive<br />
+							Coral Springs, FL. 33065<br />
+						</address>
+					</div>
+
+          <nav>
+              <ul>
+                  <li><a href="#education">Education</a></li>
+                  <li><a href="#experience">Experience</a></li>
+                  <li><a href="#skills">Skills</a></li>
+              </ul>
+          </nav>
 				</header>
 			</div>
 
@@ -47,7 +70,7 @@
 						<section id="skills">
 	              <h2>Skills</h2>
 	              <ul>
-	                  <li>Java, Python, HTML/CSS, Microsoft SQL Server</li>
+	                  <li>Java, Python, HTML/CSS, Microsoft SQL Server, Git/Github</li>
 	                  <li>Agile Methodology (Kanban, Scrum)</li>
 	                  <li>Conversational Spanish</li>
 	                  <li>Microsoft Suite</li>
