Changed address html, css.

--- a/resume.html
+++ b/resume.html
@@ -29,8 +29,10 @@
 					<div id="addr_current">
 						<p>Current Address</p>
             <address>
-                University of Miami<br />
-                Mahoney Residential College<br />
+							Room 538<br />
+							1101 Stanford Dr<br />
+							Coral Gables, FL 33146<br />
+							Mahoney Residential College<br />
             </address>
 					</div>
 
