Added Google Web Fonts, listed github under contact info, adjusted header sizes, adjusted list bullet point positions.

--- a/resume.html
+++ b/resume.html
@@ -15,13 +15,14 @@
 						<img src="img/Sherman_Hewitt_picture.jpg" alt="Sherman Hewitt" />
 					</div>
 
-					<h1>Sherman A. Hewitt Jr.</h1>
+					<h1>Sherman A. Hewitt</h1>
 
 					<div id="contact-info">
 						<ul>
 							<li>678-925-2463</li>
 							<li>s.hewitt7@umiami.edu</li>
 							<li>Twitter: @Sherman_Hewitt</li>
+							<li>Github: github.com/SHewitt95</li>
 						</ul>
 					</div>
 
