--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,8 @@
 	<head>
         	<meta charset="utf-8" />
         	<title>Sherman Hewitt's Resume</title>
-					<link href="css/styles.css" rel="stylesheet" />
+				  <link href="css/styles.css" rel="stylesheet" />
+					<!- <link href="css/print.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -35,15 +36,6 @@
 							Coral Gables, FL 33146<br />
 							Mahoney Residential College<br />
             </address>
-					</div>
-
-					<!-Permanent Address->
-					<div id="addr_permanent">
-						<p>Permanent Address</p>
-						<address>
-							3454 Coral Springs Drive<br />
-							Coral Springs, FL. 33065<br />
-						</address>
 					</div>
 
           <nav>
