Lots of adjustments to print.css, changed font sizes a bit.

--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,8 @@
 	<head>
         	<meta charset="utf-8" />
         	<title>Sherman Hewitt's Resume</title>
-				  <link href="css/styles.css" rel="stylesheet" />
-					<!- <link href="css/print.css" rel="stylesheet" />
+				  <link href="css/styles.css" media="screen" rel="stylesheet" />
+					<link href="css/print.css" media="print" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -16,25 +16,23 @@
 						<img src="img/Sherman_Hewitt_picture.jpg" alt="Sherman Hewitt" />
 					</div>
 
-					<h1>Sherman A. Hewitt</h1>
+					<h1>Sherman Hewitt</h1>
 
 					<div id="contact-info">
 						<ul>
 							<li>678-925-2463</li>
+							<li>@Sherman_Hewitt</li>
+							<li>github.com/SHewitt95</li>
 							<li>s.hewitt7@umiami.edu</li>
-							<li>Twitter: @Sherman_Hewitt</li>
-							<li>Github: github.com/SHewitt95</li>
 						</ul>
 					</div>
 
-					<!-Current Address->
 					<div id="addr_current">
 						<p>Current Address</p>
             <address>
-							Room 538<br />
-							1101 Stanford Dr<br />
+							Mahoney, Room 538<br />
+							1101 Stanford Drive<br />
 							Coral Gables, FL 33146<br />
-							Mahoney Residential College<br />
             </address>
 					</div>
 
@@ -51,14 +49,14 @@
 			<div id="column_2">
 	      <main>
 
-          <section id="education">
-              <h2>Education</h2>
+	        <section id="education">
+	            <h2>Education</h2>
 							<ul>
 	              <li><a href="http://www.miami.edu/">University of Miami</a>, Coral Gables, FL.</li>
 	              <li>Bachelor of Arts, Computer Science, May 2017</li>
 	              <li>Minors in Journalism and Interactive Media</li>
 							</ul>
-          </section>
+	        </section>
 
 					<section id="skills">
 							<h2>Skills</h2>
@@ -70,51 +68,51 @@
 							</ul>
 					</section>
 
-          <section id="experience">
-              <h2>Experience</h2>
+	        <section id="experience">
+	            <h2>Experience</h2>
 
 							<article>
-                <p>Assistant Online Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
-                <ul>
-                    <li>Edited and scheduled stories for publication online, maintaining a constant flow of content</li>
-                    <li>Organized story workflow between editors with Trello, bringing Agile ideas into the newsroom</li>
+	              <p>Assistant Online Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
+	              <ul>
+	                  <li>Edited and scheduled stories for publication online, maintaining a constant flow of content</li>
+	                  <li>Organized story workflow between editors with Trello, bringing Agile ideas into the newsroom</li>
 										<li>Enhanced online articles by adding interactive elements such as audio, maps, photo galleries and polls</li>
-                    <li>Uploaded newspaper’s virtual edition to Issuu and sent MailChimp newsletters, increasing traffic to the website</li>
-                </ul>
+	                  <li>Uploaded newspaper’s virtual edition to Issuu and sent MailChimp newsletters, increasing traffic to the website</li>
+	              </ul>
 						  </article>
 
 							<article>
 								<p>Copy Chief, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Aug. 2014 to Dec. 2014</p>
-                <ul>
-                    <li>Proofread articles alongside other editors to better understand and edit content</li>
-                    <li>Coordinated a team of copy editors to increase availability of all-day online editing</li>
-                    <li>Contributed ideas during weekly editorial meetings in order to help direct the newspaper’s goals</li>
-                    <li>Drafted standards and guidelines for publishing content online, reducing errors made by copy desk</li>
-                    <li>Crafted headlines based on search engine optimization methods, driving traffic to the newspaper’s website</li>
-                </ul>
+	              <ul>
+	                  <li>Proofread articles alongside other editors to better understand and edit content</li>
+	                  <li>Coordinated a team of copy editors to increase availability of all-day online editing</li>
+	                  <li>Contributed ideas during weekly editorial meetings in order to help direct the newspaper’s goals</li>
+	                  <li>Drafted standards and guidelines for publishing content online, reducing errors made by copy desk</li>
+	                  <li>Crafted headlines based on search engine optimization methods, driving traffic to the newspaper’s website</li>
+	              </ul>
 							</article>
 
 							<article>
 								<p>Quality Assurance Intern, <a href="http://www.fisglobal.com/">FIS Global</a>, Sunrise, FL. - June 2014 to Aug. 2014</p>
-                <ul>
-                    <li>Learned SQL through database management in Microsoft's SQL Server</li>
-                    <li>Acquired the fundamentals of agile methodologies and the software development life cycle</li>
-                    <li>Created workflow visualizations for the QA team, increasing the fulfillment of standard operating procedures</li>
-                    <li>Managed the team's SharePoint website, keeping documents updated and creating guidelines for current and future QA members</li>
-                </ul>
+	              <ul>
+	                  <li>Learned SQL through database management in Microsoft's SQL Server</li>
+	                  <li>Acquired the fundamentals of agile methodologies and the software development life cycle</li>
+	                  <li>Created workflow visualizations for the QA team, increasing the fulfillment of standard operating procedures</li>
+	                  <li>Managed the team's SharePoint website, keeping documents updated and creating guidelines for current and future QA members</li>
+	              </ul>
 							</article>
 
 							<article>
 								<p>Copy Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Sept. 2013 to May 2014</p>
-                <ul>
-                    <li>Checked accuracy of facts in articles</li>
-                    <li>Imagined up headlines and captions that caught readers' attention</li>
-                    <li>Corrected spelling, grammatical and AP style errors in the newspaper</li>
-                    <li>Published stories online through WordPress, a blogging tool and content management system</li>
-                </ul>
+	              <ul>
+	                  <li>Checked accuracy of facts in articles</li>
+	                  <li>Imagined up headlines and captions that caught readers' attention</li>
+	                  <li>Corrected spelling, grammatical and AP style errors in the newspaper</li>
+	                  <li>Published stories online through WordPress, a blogging tool and content management system</li>
+	              </ul>
 							</article>
 
-          </section>
+	          </section>
 
 	      </main>
 			</div>
