--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <html>
   <head>
-    <title>Sherman's page</title>
+    <meta charset="utf-8" />
+    <title>Sherman Hewitt</title>
   </head>
-  
+
   <body>
-    <h1>Hello, world!</h1>
-      
+    <header>
+      <nav>
+        <ul>
+          <li>Code</li>
+          <li>Written Work</li>
+          <li>About Me</li>
+          <li>Contact</li>
+          <li>Resume</li>
+        </ul>
+      </nav>
+      <h1>Sherman Hewitt</h1>
+    </header>
+
     <p>Welcome to my website. I'm Sherman Hewitt.</p>
   </body>
-  
+
 </html>
