Added slogan. Legit, amiright?

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
           <li>Resume</li>
         </ul>
       </nav>
-      <h1>Sherman Hewitt</h1>
     </header>
 
-    <p>Welcome to my website. I'm Sherman Hewitt.</p>
+    <h1>Sherman Hewitt</h1>
+    <p>Deadline meets Command Line.</p>
+
   </body>
 
 </html>
