Added more meaningful tags.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    
     <header>
       <nav>
         <ul>
@@ -17,8 +18,10 @@
       </nav>
     </header>
 
-    <h1>Sherman Hewitt</h1>
-    <p>Deadline meets Command Line.</p>
+    <main>
+      <h1>Sherman Hewitt</h1>
+      <p>Deadline meets Command Line.</p>
+    </main>
 
   </body>
 
