Editing homepage. May make it main contact page.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <main>
         <h1 id="name">Sherman Hewitt</h1>
-        <p>Deadline meets Command Line.</p>
+        <p id="slogan">Deadline meets Command Line.</p>
       </main>
 
       <footer>
