Added credit for social media icons.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
       <main>
         <h1 id="name">Sherman Hewitt</h1>
         <p id="slogan">Deadline meets Command Line.</p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
       </main>
 
       <footer>
-
+        <div id="icon-credit">Icons made by <a href="http://www.flaticon.com/authors/daniel-bruce" title="Daniel Bruce">Daniel Bruce</a>,
+          <a href="http://www.flaticon.com/authors/elegant-themes" title="Elegant Themes">Elegant Themes</a>,
+          <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,
+          <a href="http://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>
+          from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+          are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
+        </div>
       </footer>
     </div>
   </body>
