Added social media icons

--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
       <main>
         <h1 id="name">Sherman Hewitt</h1>
         <p id="slogan">Deadline meets Command Line.</p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <a href=""><img src="img/twitter1.png" alt="Twitter" /></a>
+        <a href=""><img src="img/linkedin11.png" alt="LinkedIn" /></a>
+        <a href=""><img src="img/logotype18.png" alt="Github" /></a>
+        <a href=""><img src="img/email20.png" alt="Email" /></a>
       </main>
 
       <footer>
