Fixed footer to bottom of page, linked images to respective websites.

--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
       <main>
         <h1 id="name">Sherman Hewitt</h1>
         <p id="slogan">Deadline meets Command Line.</p>
-        <a href=""><img src="img/twitter1.png" alt="Twitter" /></a>
-        <a href=""><img src="img/linkedin11.png" alt="LinkedIn" /></a>
-        <a href=""><img src="img/logotype18.png" alt="Github" /></a>
-        <a href=""><img src="img/email20.png" alt="Email" /></a>
+        <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><img class="social-media" src="img/twitter1.png" alt="Twitter" /></a>
+        <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><img class="social-media" src="img/linkedin11.png" alt="LinkedIn" /></a>
+        <a target="_blank" href="https://github.com/SHewitt95"><img class="social-media" src="img/logotype18.png" alt="Github" /></a>
+        <a target="_blank" href="mailto:hewitt.sherman@gmail.com"><img class="social-media" src="img/email20.png" alt="Email" /></a>
       </main>
 
-      <footer>
-        <div id="icon-credit">Icons made by <a href="http://www.flaticon.com/authors/daniel-bruce" title="Daniel Bruce">Daniel Bruce</a>,
-          <a href="http://www.flaticon.com/authors/elegant-themes" title="Elegant Themes">Elegant Themes</a>,
-          <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,
-          <a href="http://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>
-          from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
-          are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
-        </div>
-      </footer>
+
     </div>
+
+    <footer>
+      <div id="icon-credit">Icons made by <a href="http://www.flaticon.com/authors/daniel-bruce" title="Daniel Bruce">Daniel Bruce</a>,
+        <a href="http://www.flaticon.com/authors/elegant-themes" title="Elegant Themes">Elegant Themes</a>,
+        <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,
+        <a href="http://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>
+        from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+        are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
+      </div>
+    </footer>
   </body>
 </html>
