Removed code page, finished written work page.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
         <nav>
           <ul>
-            <li><a href="code.html">Code</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="written.html">Written Work</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -22,10 +22,13 @@
       <main>
         <h1 id="name">Sherman Hewitt</h1>
         <p id="slogan">Deadline meets Command Line.</p>
-        <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><img class="social-media" src="img/twitter1.png" alt="Twitter" /></a>
-        <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><img class="social-media" src="img/linkedin11.png" alt="LinkedIn" /></a>
-        <a target="_blank" href="https://github.com/SHewitt95"><img class="social-media" src="img/logotype18.png" alt="Github" /></a>
-        <a target="_blank" href="mailto:hewitt.sherman@gmail.com"><img class="social-media" src="img/email20.png" alt="Email" /></a>
+
+        <div id="icons">
+          <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><img class="social-media" src="img/twitter1.png" alt="Twitter" /></a>
+          <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><img class="social-media" src="img/linkedin11.png" alt="LinkedIn" /></a>
+          <a target="_blank" href="https://github.com/SHewitt95"><img class="social-media" src="img/logotype18.png" alt="Github" /></a>
+          <a target="_blank" href="mailto:hewitt.sherman@gmail.com"><img class="social-media" src="img/email20.png" alt="Email" /></a>
+        </div>
       </main>
 
 
