--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       <header>
         <nav>
           <ul>
-            <li><a href="code.html">Code</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="written.html">Written Work</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="contact.html">Contact</a></li>
