Did about me page.

--- a/about.html
+++ b/about.html
@@ -17,9 +17,33 @@
             <li><a href="resume.html">R&#233;sum&#233;</a></li>
           </ul>
         </nav>
+
+        <h1>About me</h1>
       </header>
 
       <main>
+        <img id="headshot" src="img/sherman_hewitt_picture.jpg" alt="Sherman Hewitt" />
+        <p>My name is Sherman Hewitt, and I’m a student at the University of Miami.
+          I study Computer Science, but ever since boyhood,
+          I’ve had a knack for writing. Yet, I never knew what to write about, so in a sense,
+          I was a prose-less writer for quite some time.
+          </p>
+
+          <p>Then I discovered the newspaper during college.
+          At first I was shy, keeping my desire to write to myself.
+          I couldn’t possibly fathom my work being seen by newspaper editors, let alone the world!
+          But one step led to another, and I eventually had my first story published.
+          Since then, I’ve been on a role.
+          </p>
+
+          <p>As of recent, I’ve tried to find ways to bridge the gap between
+          my writing for both deadline and the command line.
+          Ultimately, I wish to be a newsroom web developer,
+          making cool applications that add an interactive layer to how stories are told.
+          I’ve taken baby steps so far, looking into programming languages
+          like Python and its accompanying web framework Flask, but lots of learning still lies ahead.
+          That, I think, makes what I want to do all the more exciting.
+          </p>
 
       </main>
 
