Such editing. Need commits. Wow

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <title>Sherman Hewitt</title>
     <link href="css/index.css" media="screen" rel="stylesheet" />
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <div id="container">
@@ -14,7 +15,7 @@
             <li><a href="written.html">Written Work</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="resume.html">R&#233;sum&#233;</a></li>
+            <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
           </ul>
         </nav>
 
