--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8" />
     <title>Sherman Hewitt</title>
     <link href="css/index.css" media="screen" rel="stylesheet" />
+    <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <div id="container">
@@ -14,18 +16,26 @@
             <li><a href="written.html">Written Work</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="resume.html">R&#233;sum&#233;</a></li>
+            <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
           </ul>
         </nav>
+
+        <h1>Contact</h1>
       </header>
 
       <main>
-
+        <div id="icons">
+          <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-5x"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-5x"></i></a>
+          <a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-5x"></i></a>
+          <a target="_blank" href="mailto:hewitt.sherman@gmail.com"><i class="fa fa-envelope-o fa-5x"></i></a>
+        </div>
       </main>
 
       <footer>
 
       </footer>
+
     </div>
   </body>
 </html>
