--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8" />
     <title>Sherman Hewitt</title>
     <link href="css/index.css" media="screen" rel="stylesheet" />
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+
   </head>
   <body>
     <div id="container">
@@ -14,34 +16,22 @@
             <li><a href="written.html">Written Work</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="resume.html">R&#233;sum&#233;</a></li>
+            <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
           </ul>
         </nav>
       </header>
 
-      <main>
+      <main id="homepage">
         <h1 id="name">Sherman Hewitt</h1>
-        <p id="slogan">Deadline meets Command Line.</p>
-
-        <div id="icons">
-          <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><img class="social-media" src="img/twitter1.png" alt="Twitter" /></a>
-          <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><img class="social-media" src="img/linkedin11.png" alt="LinkedIn" /></a>
-          <a target="_blank" href="https://github.com/SHewitt95"><img class="social-media" src="img/logotype18.png" alt="Github" /></a>
-          <a target="_blank" href="mailto:hewitt.sherman@gmail.com"><img class="social-media" src="img/email20.png" alt="Email" /></a>
-        </div>
+        <p class="slogan">Programmer &diams; Journalist</p>
+        <p class="slogan">Deadline meets Command Line.</p>
       </main>
 
 
     </div>
 
     <footer>
-      <div id="icon-credit">Icons made by <a href="http://www.flaticon.com/authors/daniel-bruce" title="Daniel Bruce">Daniel Bruce</a>,
-        <a href="http://www.flaticon.com/authors/elegant-themes" title="Elegant Themes">Elegant Themes</a>,
-        <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,
-        <a href="http://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>
-        from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
-        are licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
-      </div>
+
     </footer>
   </body>
 </html>
