--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
         	<title>Sherman Hewitt's Resume</title>
 				  <link href="css/styles.css" media="screen" rel="stylesheet" />
 					<link href="css/print.css" media="print" rel="stylesheet" />
+					<link href="img/favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 
 	<body>
