Changed nav to fixed, added hover effect

--- a/about.html
+++ b/about.html
@@ -6,23 +6,23 @@
     <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="written.html">Written Work</a></li>
+          <li><a href="about.html"><span id="current-page">About Me</span></a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
+        </ul>
+      </nav>
+
+    </header>
     <div id="container">
 
-      <header>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="written.html">Written Work</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
-          </ul>
-        </nav>
-
-        <h1>About me</h1>
-      </header>
-
       <main>
+        <h1>About me</h1>
+        
         <img id="headshot" src="img/sherman_hewitt_picture.jpg" alt="Sherman Hewitt" />
         <p>My name is Sherman Hewitt, and I’m a student at the University of Miami.
           I study Computer Science, but ever since boyhood,
