--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 
   </head>
   <body>
-    <div id="container">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html"><span id="current-page">Home</span></a></li>
+          <li><a href="written.html">Written Work</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <header>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="written.html">Written Work</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
-          </ul>
-        </nav>
-      </header>
+    <div id="container">
 
       <main id="homepage">
         <h1 id="name">Sherman Hewitt</h1>
