Adjusted hover effect in nav

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="written.html">Written Work</a></li>
-          <li><a href="about.html"><span id="current-page">About Me</span></a></li>
+          <li><span id="current-page">About Me</span></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
@@ -22,7 +22,7 @@
 
       <main>
         <h1>About me</h1>
-        
+
         <img id="headshot" src="img/sherman_hewitt_picture.jpg" alt="Sherman Hewitt" />
         <p>My name is Sherman Hewitt, and I’m a student at the University of Miami.
           I study Computer Science, but ever since boyhood,
