--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html"><span id="current-page">Home</span></a></li>
+          <li><span id="current-page">Home</span></li>
           <li><a href="written.html">Written Work</a></li>
           <li><a href="about.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
