--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="written.html">Written Work</a></li>
           <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html"><span id="current-page">Contact</span></a></li>
+          <li><span id="current-page">Contact</span></li>
           <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
       </nav>
@@ -24,7 +24,7 @@
 
       <main>
         <h1>Contact</h1>
-        
+
         <div id="icons">
           <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-5x"></i></a>
           <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-5x"></i></a>
