Made homepage name a bit more responsive to screen size.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div id="container">
 
       <main id="homepage">
-        <h1 id="name">Sherman Hewitt</h1>
+        <h1 class="name">Sherman</h1>
+        <h1 class="name">Hewitt</h1>
         <p class="slogan">Programmer &diams; Journalist</p>
         <p class="slogan">Deadline meets Command Line.</p>
       </main>
