Messing with mobile.css

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <title>Sherman Hewitt</title>
     <link href="css/index.css" media="screen" rel="stylesheet" />
+    <link href="css/mobile.css" media="screen" rel="stylesheet" />
     <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
