--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,12 @@
     <meta charset="utf-8" />
     <title>Sherman Hewitt</title>
     <link href="css/index.css" media="screen" rel="stylesheet" />
+    <link href="css/mobile.css" media="screen" rel="stylesheet" />
     <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
     <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
+    
     <header>
       <nav>
         <ul>
@@ -17,19 +19,22 @@
           <li><a target="_blank" href="resume.html">R&#233;sum&#233;</a></li>
         </ul>
       </nav>
-
-
     </header>
+
     <div id="container">
 
       <main>
         <h1>Contact</h1>
 
+        <p>Got a question or a query? Feel free to contact me!
+           <a href="mailto:hewitt.sherman@gmail.com">Email</a> would be the best way to contact me, but here are some
+           other ways to get in touch.
+        </p>
+
         <div id="icons">
           <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-5x"></i></a>
           <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-5x"></i></a>
           <a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-5x"></i></a>
-          <a target="_blank" href="mailto:hewitt.sherman@gmail.com"><i class="fa fa-envelope-o fa-5x"></i></a>
         </div>
       </main>
 
