--- a/about.html
+++ b/about.html
@@ -1,14 +1,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Sherman Hewitt</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="css/index.css" media="screen" rel="stylesheet" />
     <link href="css/mobile.css" media="screen" rel="stylesheet" />
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+
+    <title>Sherman Hewitt</title>
   </head>
   <body>
     <header>
       <nav>
+        <a href="#" id="menu-icon"></a>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="written.html">Written Work</a></li>
