--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,19 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Sherman Hewitt</title>
-    <link href="css/index.css" media="screen" rel="stylesheet" />
-    <link href="css/mobile.css" media="screen" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
     <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="css/index.css" media="screen" rel="stylesheet" />
+    <link href="css/mobile.css" media="screen" rel="stylesheet" />
+
+    <title>Sherman Hewitt</title>
   </head>
   <body>
-    
+
     <header>
       <nav>
+        <a href="#" id="menu-icon"></a>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="written.html">Written Work</a></li>
