--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -9,7 +10,7 @@
 
     <title>Sherman Hewitt</title>
   </head>
-  <body>
+  <body id="webpage">
 
     <header>
       <nav>
