--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 
   <head>
@@ -10,7 +11,7 @@
     <title>Sherman Hewitt</title>
   </head>
 
-  <body>
+  <body id="webpage">
     <header>
       <nav>
         <a href="#" id="menu-icon"></a>
