--- a/resume.html
+++ b/resume.html
@@ -2,123 +2,111 @@
 <html>
 	<head>
         	<meta charset="utf-8" />
-        	<title>Sherman Hewitt's Resume</title>
-				  <link href="css/styles.css" media="screen" rel="stylesheet" />
-					<link href="css/print.css" media="print" rel="stylesheet" />
+					<meta name="viewport" content="width=device-width, initial-scale=1" />
+					<link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
+				  <link href="css/index.css" media="screen" rel="stylesheet" />
+					<link href="css/mobile.css" media="screen" rel="stylesheet" />
+					<link href="css/test-print.css" media="print" rel="stylesheet" />
 					<link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+					<title>Sherman Hewitt's Resume</title>
 	</head>
 
-	<body>
-		<div id="container" class="clearfix">
-			<div id="column_1">
-				<header>
+	<body id="resume">
+		<div id="resume-container">
 
-					<div id="img-container">
-						<img src="img/sherman_hewitt_headshot.jpg" alt="Sherman Hewitt" />
-					</div>
+			<div id="top-section">
+				<header>
 
 					<h1>Sherman Hewitt</h1>
 
 					<div id="contact-info">
 						<ul>
-							<li>678-925-2463</li>
-							<li>@Sherman_Hewitt</li>
-							<li>github.com/SHewitt95</li>
+							<li><a target="_blank" href="http://www.shewitt.me">shewitt.me</a></li>
+							<li>678.925.2463</li>
+							<li><a target="_blank" href="https://twitter.com/Sherman_Hewitt">@Sherman_Hewitt</a></li>
 							<li>s.hewitt7@umiami.edu</li>
 						</ul>
+
+						<div id="icons">
+							<a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-2x"></i></a>
+							<a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-2x"></i></a>
+							<a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-2x"></i></a>
+							<a target="_blank" href="www.shewitt.me"><i class="fa fa-globe fa-2x"></i></a>
+						</div>
 					</div>
 
-					<div id="addr_current">
-						<p>Current Address</p>
-            <address>
-							Mahoney, Room 538<br />
-							1101 Stanford Drive<br />
-							Coral Gables, FL 33146<br />
-            </address>
-					</div>
-
-          <nav>
-              <ul>
-                  <li><a href="#education">Education</a></li>
-                  <li><a href="#experience">Experience</a></li>
-                  <li><a href="#skills">Skills</a></li>
-              </ul>
-          </nav>
 				</header>
 			</div>
 
-			<div id="column_2">
-	      <main>
+			<div id="column1">
 
-	        <section id="education">
-	            <h2>Education</h2>
-							<ul>
-	              <li><a href="http://www.miami.edu/">University of Miami</a>, Coral Gables, FL.</li>
-	              <li>Bachelor of Arts, Computer Science, May 2017</li>
-	              <li>Minors in Journalism and Interactive Media</li>
-							</ul>
-	        </section>
+				<section id="skills">
+						<h2>Skills</h2>
+						<ul>
+								<li>Java, Python, HTML/CSS, Microsoft SQL Server, Git/Github</li>
+								<li>Agile Methodology (Kanban, Scrum)</li>
+								<li>Conversational Spanish</li>
+								<li>Microsoft Suite</li>
+						</ul>
+				</section>
 
-					<section id="skills">
-							<h2>Skills</h2>
-							<ul>
-									<li>Java, Python, HTML/CSS, Microsoft SQL Server, Git/Github</li>
-									<li>Agile Methodology (Kanban, Scrum)</li>
-									<li>Conversational Spanish</li>
-									<li>Microsoft Suite</li>
-							</ul>
-					</section>
-
-	        <section id="experience">
-	            <h2>Experience</h2>
-
-							<article>
-	              <p>Assistant Online Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
-	              <ul>
-	                  <li>Edited and scheduled stories for publication online, maintaining a constant flow of content</li>
-	                  <li>Organized story workflow between editors with Trello, bringing Agile ideas into the newsroom</li>
-										<li>Enhanced online articles by adding interactive elements such as audio, maps, photo galleries and polls</li>
-	                  <li>Uploaded newspaper’s virtual edition to Issuu and sent MailChimp newsletters, increasing traffic to the website</li>
-	              </ul>
-						  </article>
-
-							<article>
-								<p>Copy Chief, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Aug. 2014 to Dec. 2014</p>
-	              <ul>
-	                  <li>Proofread articles alongside other editors to better understand and edit content</li>
-	                  <li>Coordinated a team of copy editors to increase availability of all-day online editing</li>
-	                  <li>Contributed ideas during weekly editorial meetings in order to help direct the newspaper’s goals</li>
-	                  <li>Drafted standards and guidelines for publishing content online, reducing errors made by copy desk</li>
-	                  <li>Crafted headlines based on search engine optimization methods, driving traffic to the newspaper’s website</li>
-	              </ul>
-							</article>
-
-							<article>
-								<p>Quality Assurance Intern, <a href="http://www.fisglobal.com/">FIS Global</a>, Sunrise, FL. - June 2014 to Aug. 2014</p>
-	              <ul>
-	                  <li>Learned SQL through database management in Microsoft's SQL Server</li>
-	                  <li>Acquired the fundamentals of agile methodologies and the software development life cycle</li>
-	                  <li>Created workflow visualizations for the QA team, increasing the fulfillment of standard operating procedures</li>
-	                  <li>Managed the team's SharePoint website, keeping documents updated and creating guidelines for current and future QA members</li>
-	              </ul>
-							</article>
-
-							<article>
-								<p>Copy Editor, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Sept. 2013 to May 2014</p>
-	              <ul>
-	                  <li>Checked accuracy of facts in articles</li>
-	                  <li>Imagined up headlines and captions that caught readers' attention</li>
-	                  <li>Corrected spelling, grammatical and AP style errors in the newspaper</li>
-	                  <li>Published stories online through WordPress, a blogging tool and content management system</li>
-	              </ul>
-							</article>
-
-	          </section>
-
-	      </main>
+				<section id="education">
+						<h2>Education</h2>
+						<ul>
+							<li><a href="http://www.miami.edu/">University of Miami</a></li>
+							<li>Coral Gables, FL.</li>
+							<li>Computer Science B.A., May 2017</li>
+							<li>Minors: Journalism and Interactive Media</li>
+						</ul>
+				</section>
 			</div>
 
+			<div id="column2">
+				<section id="experience">
+						<h2>Experience</h2>
+
+						<article>
+							<p><span class="job">Assistant Online Editor</span>, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Jan. 2015 to Present</p>
+							<ul>
+									<li>Edited and scheduled stories for publication online, keeping daily flow of content</li>
+									<li>Introduced editors to Trello, an online workboard used to keep stories organized</li>
+									<li>Enhanced online articles by adding interactive elements such as audio, maps, photo galleries and polls</li>
+									<li>Uploaded newspaper’s virtual edition to Issuu and sent MailChimp newsletters, increasing traffic to the website</li>
+							</ul>
+						</article>
+
+						<article>
+							<p><span class="job">Copy Chief</span>, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Aug. 2014 to Dec. 2014</p>
+							<ul>
+									<li>Proofread articles alongside other editors to better understand and edit content</li>
+									<li>Coordinated team of copy editors to increase availability of daily online editing</li>
+									<li>Contributed ideas during weekly editorial meetings in order to help direct the newspaper’s goals</li>
+									<li>Drafted standards and guidelines for publishing content online, reducing errors made by copy desk</li>
+									<li>Crafted headlines based on search engine optimization methods, driving traffic to the newspaper’s website</li>
+							</ul>
+						</article>
+
+						<article>
+							<p><span class="job">Quality Assurance Intern</span>, <a href="http://www.fisglobal.com/">FIS Global</a>, Sunrise, FL. - June 2014 to Aug. 2014</p>
+							<ul>
+									<li>Learned SQL through database management in Microsoft's SQL Server</li>
+									<li>Acquired the fundamentals of agile methodologies and the software development life cycle</li>
+									<li>Created workflow visualizations for the QA team, increasing the fulfillment of standard operating procedures</li>
+									<li>Managed the team's SharePoint website, keeping documents updated and creating guidelines for current and future QA members</li>
+							</ul>
+						</article>
+
+						<article>
+							<p><span class="job">Copy Editor</span>, <a href="http://www.themiamihurricane.com/">The Miami Hurricane</a>, Coral Gables, FL. - Sept. 2013 to May 2014</p>
+							<ul>
+									<li>Checked accuracy of facts in articles</li>
+									<li>Imagined up headlines and captions that caught readers' attention</li>
+									<li>Corrected spelling, grammatical and AP style errors in the newspaper</li>
+									<li>Published stories online through WordPress, a blogging tool and content management system</li>
+							</ul>
+						</article>
+					</section>
+			</div>
 		</div>
 	</body>
-
 </html>
