--- a/written.html
+++ b/written.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -8,7 +9,7 @@
 
     <title>Sherman Hewitt</title>
   </head>
-  <body>
+  <body id="webpage">
     <header>
       <nav>
         <a href="#" id="menu-icon"></a>
