--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
 							<a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-2x"></i></a>
 							<a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-2x"></i></a>
 							<a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-2x"></i></a>
-							<a target="_blank" href="www.shewitt.me"><i class="fa fa-globe fa-2x"></i></a>
+							<a target="_blank" href="http://www.shewitt.me"><i class="fa fa-globe fa-2x"></i></a>
 						</div>
 					</div>
 
