Fixed up mobile resume page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="stylesheet" href="font-awesome-4.3.0/css/font-awesome.min.css">
     <link href="css/index.css" media="screen" rel="stylesheet" />
     <link href="css/mobile.css" media="screen" rel="stylesheet" />
 
@@ -32,6 +33,12 @@
         <h1 class="name">Hewitt</h1>
         <p class="slogan">Programmer &diams; Journalist</p>
         <p class="slogan">Deadline meets Command Line.</p>
+
+        <div id="home-icons">
+          <a target="_blank" href="https://twitter.com/Sherman_Hewitt"><i class="fa fa-twitter fa-3x"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/shermanhewitt"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <a target="_blank" href="https://github.com/SHewitt95"><i class="fa fa-github fa-3x"></i></a>
+        </div>
       </main>
 
 
